add in queen's pawn and flank home page, add in italian game home page, build out moves table component

--- a/src/app/components/breadcrumb/breadcrumb.component.scss
+++ b/src/app/components/breadcrumb/breadcrumb.component.scss
@@ -10,8 +10,12 @@
   a:hover,
   span:hover {
     color: dimgrey;
-    text-decoration: none;
     cursor: pointer;
+    text-decoration: none;
+  }
+  li:last-child > span:hover {
+    font-weight: bold;
+    cursor: default;
   }
   li {
     list-style: none;
