--- a/src/app/components/entry/entry.component.html
+++ b/src/app/components/entry/entry.component.html
@@ -5,13 +5,19 @@
   <div class="mat-headline">Browse</div>
   <div class="catalog">
     <mat-card>
-      <button mat-button color="accent" routerLink="/e4">King's Pawn Openings</button>
+      <mat-card-actions>
+        <button mat-button color="accent" routerLink="/e4">King's Pawn Openings</button>
+      </mat-card-actions>
     </mat-card>
     <mat-card>
-      <button mat-button color="accent">Queen's Pawn Openings</button>
+      <mat-card-actions>
+        <button mat-button color="accent" routerLink="/d4">Queen's Pawn Openings</button>
+      </mat-card-actions>
     </mat-card>
     <mat-card>
-      <button mat-button color="accent">Flank Openings</button>
+      <mat-card-actions>
+        <button mat-button color="accent" routerLink="/flank">Flank Openings</button>
+      </mat-card-actions>
     </mat-card>
   </div>
 </div>
