--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,7 +1,17 @@
 <h3 class="mat-headline">Search Website</h3>
 
 <mat-form-field app-search appearance="outline">
-  <input matInput placeholder="Enter openings/variations here"/>
+  <input matInput [formControl]="searchResult" maxlength="50" placeholder="Enter openings/variations here" [matAutocomplete]="auto"/>
+  <mat-autocomplete #auto="matAutocomplete">
+    <div *ngIf="!noFilteredResult else noResult;">
+      <mat-option *ngFor="let opening of filteredList" [value]="opening.name">
+        {{opening.name}}
+      </mat-option>
+    </div>
+    <ng-template #noResult>
+      <mat-option>No Result</mat-option>
+    </ng-template>
+  </mat-autocomplete>
 </mat-form-field>
 
 <button mat-flat-button color="primary">
