--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -14,6 +14,6 @@
   </mat-autocomplete>
 </mat-form-field>
 
-<button mat-flat-button color="primary">
+<button mat-flat-button color="primary" (click)="navigate()">
   Search
 </button>
