add pieces to board, fix routing to rebuild grid, connect table to moves from board

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,7 +1,7 @@
 <div class="grid">
   <div *ngFor="let row of grid">
     <div *ngFor="let cell of row" class="cell">
-      <app-cell [coordinates]="cell"></app-cell>
+      <app-cell [cellInfo]="cell"></app-cell>
     </div>
   </div>
 </div>
