--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 56px;
+  margin-top: 24px;
 }
 
 app-breadcrumb {
@@ -11,4 +11,6 @@ app-breadcrumb {
 
 .main {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
