--- a/src/app/components/entry/entry.component.html
+++ b/src/app/components/entry/entry.component.html
@@ -1,23 +1,3 @@
-<h1 class="mat-display-3">Chess Opening Theories</h1>
-<mat-divider></mat-divider>
+<h1 class="mat-display-2">Chess Opening Theories</h1>
 
-<div class="footer">
-  <div class="mat-headline">Browse</div>
-  <div class="catalog">
-    <mat-card>
-      <mat-card-actions>
-        <button mat-button color="accent" routerLink="/e4">King's Pawn Openings</button>
-      </mat-card-actions>
-    </mat-card>
-    <mat-card>
-      <mat-card-actions>
-        <button mat-button color="accent" routerLink="/d4">Queen's Pawn Openings</button>
-      </mat-card-actions>
-    </mat-card>
-    <mat-card>
-      <mat-card-actions>
-        <button mat-button color="accent" routerLink="/flank">Flank Openings</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
-</div>
+<app-main></app-main>
