--- a/src/app/components/entry/entry.component.scss
+++ b/src/app/components/entry/entry.component.scss
@@ -2,20 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 56px;
+  margin-top: 32px;
 }
 
-.footer {
-  margin-top: 24px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  .catalog {
-    display: flex;
-    .mat-card {
-      margin: 12px;
-    }
-  }
+.mat-display-2 {
+  margin-bottom: 0;
 }
