--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,5 @@
 <div class="main"> 
+  <app-options></app-options>
   <app-board [opening]="opening" (outputMoves)="handleMoves($event)"></app-board>
   <app-moves-table [moves]="moves"></app-moves-table>
 </div>
