--- a/src/app/components/cell/cell.component.html
+++ b/src/app/components/cell/cell.component.html
@@ -1,2 +1,3 @@
 <span *ngIf="showCoord | async" class="coordinates">{{(cellInfo | async).coord}}</span>
 <div [class]="(cellInfo | async).currentPiece" class="pieces"></div>
+<div class="highlight" [ngClass]="{'old-pos': isOldPos, 'new-pos': isNewPos}"></div>
