add move notation service to get next moves notation

--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -2,6 +2,6 @@
   <mat-card class='info-card' *ngFor="let move of nextMovesInfo | async" (click)="navigateMove(move)">
     <mat-card-title>{{move.name}}</mat-card-title>
     <mat-card-subtitle>Continuations: {{move.continuations}}</mat-card-subtitle>
-    <mat-card-content>{{move.moves}}</mat-card-content>
+    <mat-card-content>{{move.notation}}</mat-card-content>
   </mat-card> 
 </mat-list>
