--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -1,1 +1,2 @@
 <mat-checkbox [formControl]="showCoord" labelPosition="before">Show Coordinates</mat-checkbox>
+<mat-checkbox [formControl]="showPercent" labelPosition="before">Show Percent</mat-checkbox>
