--- a/src/app/components/options/options.component.scss
+++ b/src/app/components/options/options.component.scss
@@ -1,4 +1,6 @@
 :host {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+  flex-direction: column;
+  justify-content: center;
 }
