--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -1,2 +1,4 @@
 <mat-checkbox [formControl]="showCoord" labelPosition="before">Show Coordinates</mat-checkbox>
 <mat-checkbox [formControl]="showPercent" labelPosition="before">Show Percent</mat-checkbox>
+<mat-checkbox [formControl]="showSpace" labelPosition="before">Show Space</mat-checkbox>
+
