add drag drop on pieces - no rules yet

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,7 +1,12 @@
 <div class="grid">
   <div *ngFor="let row of grid">
     <div *ngFor="let cell of row" class="cell">
-      <app-cell [cellInfo]="cell"></app-cell>
+      <app-cell [cellInfo]="cell" 
+        cdkDropList 
+        [id]="(cell | async).coord" 
+        [cdkDropListConnectedTo]="listOfCoords"
+        (cdkDropListDropped)="drop($event)"
+        [cdkDropListEnterPredicate]="enterPredicate.bind(this)"></app-cell>
     </div>
   </div>
 </div>
