--- a/src/app/components/cell/cell.component.html
+++ b/src/app/components/cell/cell.component.html
@@ -1,5 +1,10 @@
 <span *ngIf="showCoord | async" class="coordinates">{{(cellInfo | async).coord}}</span>
-<div [class]="(cellInfo | async).currentPiece" class="pieces"></div>
+<div [class]="(cellInfo | async).currentPiece" 
+  class="pieces"
+  cdkDrag
+  [cdkDragData]="(cellInfo | async).coord">
+  <div class="drag-placeholder" *cdkDragPlaceholder></div>
+</div>
 <div *ngIf="hasNextMoves && (showPercent | async)" class="move-percent">{{movePercentage}}</div>
 <div class="highlight" 
   [ngClass]="{
