add move table service. fix up so drag and drop updates other components correctly

--- a/src/app/components/cell/cell.component.html
+++ b/src/app/components/cell/cell.component.html
@@ -1,8 +1,8 @@
-<span *ngIf="showCoord | async" class="coordinates">{{(cellInfo | async).coord}}</span>
+<span *ngIf="showCoord | async" class="coordinates">{{coord}}</span>
 <div [class]="(cellInfo | async).currentPiece" 
   class="pieces"
   cdkDrag
-  [cdkDragData]="(cellInfo | async).coord">
+  [cdkDragData]="coord">
   <div class="drag-placeholder" *cdkDragPlaceholder></div>
 </div>
 <div *ngIf="hasNextMoves && (showPercent | async)" class="move-percent">{{movePercentage}}</div>
