move code from board component to move service. allow other component to access current board state

--- a/src/app/components/cell/cell.component.html
+++ b/src/app/components/cell/cell.component.html
@@ -2,9 +2,11 @@
 <div [class]="(cellInfo | async).currentPiece" 
   class="pieces"
   cdkDrag
-  [cdkDragData]="coord">
+  [cdkDragData]="coord"
+  (cdkDragStarted)="getValidMoves()">
   <div class="drag-placeholder" *cdkDragPlaceholder></div>
 </div>
+<div *ngIf="!isValidMove" class="valid-move"></div>
 <div *ngIf="hasNextMoves && (showPercent | async)" class="move-percent">{{movePercentage}}</div>
 <div class="highlight" 
   [ngClass]="{
