--- a/src/app/components/cell/cell.component.scss
+++ b/src/app/components/cell/cell.component.scss
@@ -1,6 +1,10 @@
-:host {
+.container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  height: 100%;
   position: relative;
-  z-index: 2
+  z-index: 2;
 }
 
 .drag-placeholder {
@@ -31,35 +35,44 @@
   }
 }
 
-.coordinates, .move-percent {
-  position: absolute;
-  left: 4px;
+.coordinates {
+  position: fixed;
 }
 
 .move-percent {
-  top: 20px;
+  position: fixed;
   color: black;
   background-color: white;
   opacity: 85%;
-  z-index: 2;
+}
+
+.coord-container {
+  grid-column: 1;
+  grid-row: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .valid-move {
-  position: absolute;
+  position: fixed;
   z-index: 2;
   width: 20px;
   height: 20px;
   border-radius: 100%;
   border: solid;
-  top: 20px;
+  color: black;
 }
 
 .pieces {
-  position: relative;
-  z-index: 2;
+  grid-column: 1;
+  grid-row: 1;
   background-repeat: no-repeat;
   background-size: contain;
   height: 100%;
+  display: grid;
+  position: relative;
+  z-index: 2;
 }
 
 .white-pawn {
