--- a/src/app/components/cell/cell.component.scss
+++ b/src/app/components/cell/cell.component.scss
@@ -36,11 +36,11 @@
 }
 
 .coordinates {
-  position: fixed;
+  position: absolute;
 }
 
 .move-percent {
-  position: fixed;
+  position: absolute;
   color: black;
   background-color: white;
   opacity: 85%;
@@ -55,7 +55,7 @@
 }
 
 .valid-move {
-  position: fixed;
+  position: absolute;
   z-index: 2;
   width: 20px;
   height: 20px;
