--- a/src/app/components/cell/cell.component.scss
+++ b/src/app/components/cell/cell.component.scss
@@ -33,6 +33,10 @@
   &.attacked-both {
     background-color: purple;
   }
+
+  &.attacked-none {
+    background-color: unset;
+  }
 }
 
 .coordinates {
