add all castling rule checks

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <app-options></app-options>
   <app-board [opening]="opening"></app-board>
-  <app-moves-table *ngIf="(moves | async).length > 0"></app-moves-table>
+  <app-moves-table></app-moves-table>
   <app-info></app-info> 
 </div>
