add promotion move - move images to assets folder so it is usable in the template

--- a/src/app/components/cell/cell.component.scss
+++ b/src/app/components/cell/cell.component.scss
@@ -80,38 +80,38 @@
 }
 
 .white-pawn {
-  background-image: url("../../../resources/images/white_pawn.svg");
+  background-image: url("/assets/images/white_pawn.svg");
 }
 .white-knight {
-  background-image: url("../../../resources/images/white_knight.svg");
+  background-image: url("/assets/images/white_knight.svg");
 }
 .white-bishop {
-  background-image: url("../../../resources/images/white_bishop.svg");
+  background-image: url("/assets/images/white_bishop.svg");
 }
 .white-rook {
-  background-image: url("../../../resources/images/white_rook.svg");
+  background-image: url("/assets/images/white_rook.svg");
 }
 .white-queen {
-  background-image: url("../../../resources/images/white_queen.svg");
+  background-image: url("/assets/images/white_queen.svg");
 }
 .white-king {
-  background-image: url("../../../resources/images/white_king.svg");
+  background-image: url("/assets/images/white_king.svg");
 }
 .black-pawn {
-  background-image: url("../../../resources/images/black_pawn.svg");
+  background-image: url("/assets/images/black_pawn.svg");
 }
 .black-knight {
-  background-image: url("../../../resources/images/black_knight.svg");
+  background-image: url("/assets/images/black_knight.svg");
 }
 .black-bishop {
-  background-image: url("../../../resources/images/black_bishop.svg");
+  background-image: url("/assets/images/black_bishop.svg");
 }
 .black-rook {
-  background-image: url("../../../resources/images/black_rook.svg");
+  background-image: url("/assets/images/black_rook.svg");
 }
 .black-queen {
-  background-image: url("../../../resources/images/black_queen.svg");
+  background-image: url("/assets/images/black_queen.svg");
 }
 .black-king {
-  background-image: url("../../../resources/images/black_king.svg");
+  background-image: url("/assets/images/black_king.svg");
 }
