--- a/src/app/components/board/promotionModal/promotion-modal.component.html
+++ b/src/app/components/board/promotionModal/promotion-modal.component.html
@@ -1,30 +1,30 @@
 
 <div *ngIf="data.color === 'white' else black">
   <button mat-stroked-button mat-dialog-close="queen">
-    <img [src]="'assets/images/white_queen.svg'" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg" />
   </button>
   <button mat-stroked-button mat-dialog-close="knight">
-    <img [src]="'assets/images/white_knight.svg'" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg" />
   </button>
   <button mat-stroked-button mat-dialog-close="bishop">
-    <img [src]="'assets/images/white_bishop.svg'" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg" />
   </button>
   <button mat-stroked-button mat-dialog-close="rook">
-    <img [src]="'assets/images/white_rook.svg'" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg" />
   </button>
 </div>
 
 <ng-template #black>
   <button mat-stroked-button mat-dialog-close="queen">
-    <img [src]="'assets/images/black_queen.svg'" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg" />
   </button>
   <button mat-stroked-button mat-dialog-close="knight">
-    <img [src]="'assets/images/black_knight.svg'" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg" />
   </button>
   <button mat-stroked-button mat-dialog-close="bishop">
-    <img [src]="'assets/images/black_bishop.svg'" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg" />
   </button>
   <button mat-stroked-button mat-dialog-close="rook">
-    <img [src]="'assets/images/black_rook.svg'" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg" />
   </button>
 </ng-template>
