--- a/src/app/components/cell/cell.component.scss
+++ b/src/app/components/cell/cell.component.scss
@@ -80,38 +80,38 @@
 }
 
 .white-pawn {
-  background-image: url("/assets/images/white_pawn.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg");
 }
 .white-knight {
-  background-image: url("/assets/images/white_knight.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg");
 }
 .white-bishop {
-  background-image: url("/assets/images/white_bishop.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg");
 }
 .white-rook {
-  background-image: url("/assets/images/white_rook.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg");
 }
 .white-queen {
-  background-image: url("/assets/images/white_queen.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg");
 }
 .white-king {
-  background-image: url("/assets/images/white_king.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg");
 }
 .black-pawn {
-  background-image: url("/assets/images/black_pawn.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg");
 }
 .black-knight {
-  background-image: url("/assets/images/black_knight.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg");
 }
 .black-bishop {
-  background-image: url("/assets/images/black_bishop.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg");
 }
 .black-rook {
-  background-image: url("/assets/images/black_rook.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg");
 }
 .black-queen {
-  background-image: url("/assets/images/black_queen.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg");
 }
 .black-king {
-  background-image: url("/assets/images/black_king.svg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg");
 }
